# zero2prod

./: .env  Cargo.toml  Dockerfile  Dockerfile.basic  configuration.yaml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: audit-on-push.yml  rust.yml  scheduled-audit.yml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
